# chronicler

./: .dockerignore  .gitignore  Containerfile  README.md  VALIDATION_UPERF_RPOPC-1275.md  pyproject.toml  requirements.txt  run_postprocessing.py
.github/workflows/: containerize.yaml
config/: README.md  opensearch_index_template.json
docs/: fio-per-job-data.md
exporters/: opensearch_exporter.py
processors/: fio_processor.py  streams_processor.py  uperf_processor.py
scripts/: BACKUP_EXAMPLE.md  README_BACKUP.md  export_local_run_dirs.py  opensearch_backup.py
src/chronicler/: __init__.py  config_discovery.py  run_postprocessing.py  schema.py
src/chronicler/config/: __init__.py  export_config_example.yml  opensearch_index_template.json
src/chronicler/exporters/: opensearch_exporter.py
src/chronicler/processors/: README.md  autohpl_processor.py  base_processor.py  coremark_pro_processor.py  coremark_processor.py  fio_processor.py  passmark_processor.py  phoronix_processor.py  pig_processor.py  pyperf_processor.py  run_utils.py  speccpu2017_processor.py  (+4 more)
tests/: conftest.py  test_archive_handler.py  test_autohpl_timestamps.py  test_autohpl_version_extraction.py  test_base_processor.py  test_bios_memory_extraction.py  test_cli_explicit_config.py  test_config_discovery.py  test_coremark_pro_timestamps.py  test_coremark_timestamps.py  test_export_local_run_dirs.py  test_fio_multi_metric.py  test_fio_version_extraction.py  test_load_config_guard.py  test_opensearch_backup_cli.py  test_parser_utils.py  test_passmark_integration.py  test_passmark_timestamps.py  test_passmark_version_extraction.py  test_phoronix_version_extraction.py  test_pig_processor.py  test_processor_parsing.py  test_run_utils.py  test_schema.py  test_speccpu2017_timestamps.py  test_speccpu2017_version_extraction.py  test_specjbb_integration.py  test_specjbb_timestamps.py  test_specjbb_version.py  test_streams_multi_metric.py  test_streams_timestamps.py  test_streams_version_extraction.py  test_timestamp_utils.py  test_uperf_integration.py  test_uperf_multi_metric.py  test_uperf_timestamps.py  test_uperf_version.py
tests/chronicler/: __init__.py  conftest.py
tests/post_processing/: __init__.py  conftest.py
(+3 files in other folders)
